<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/turquoise"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/title"
        android:textColor="@color/dark_turquoise"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/band_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/title"
        android:layout_marginTop="10dp"
        android:src="@drawable/band_cover"/>

    <LinearLayout
        android:id="@+id/song_title_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/band_image"
        android:layout_margin="@dimen/outside_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/song1_text_view"
            style="@style/song_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/song1"/>

        <TextView
            android:id="@+id/song2_text_view"
            style="@style/song_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/song2"/>

        <TextView
            android:id="@+id/song3_text_view"
            style="@style/song_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/song3"/>

        <TextView
            android:id="@+id/song4_text_view"
            style="@style/song_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/song4"/>

        <TextView
            android:id="@+id/song5_text_view"
            style="@style/song_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/song5"/>

        <TextView
            android:id="@+id/song6_text_view"
            style="@style/song_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/song6"/>

        <TextView
            android:id="@+id/song7_text_view"
            style="@style/song_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/song7"/>

        <TextView
            android:id="@+id/song8_text_view"
            style="@style/song_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/song8"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/control_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/song_title_list"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_margin="15dp"
            android:adjustViewBounds="true"
            android:maxHeight="60dp"
            android:onClick="playButton"
            android:src="@drawable/play_button"/>

        <ImageView
            android:id="@+id/pause_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_toEndOf="@id/play_button"
            android:adjustViewBounds="true"
            android:maxHeight="60dp"
            android:onClick="pauseButton"
            android:src="@drawable/pause_button"/>
    </LinearLayout>

</RelativeLayout>